[FAIT] - Remise en place de l'ancien style

--- a/app/styles/navbar.css
+++ b/app/styles/navbar.css
@@ -1,4 +1,4 @@
-/* Styles spécifiques pour la navbar FireflyOfSoulStudio */
+/* Todo : app/styles/navbar.css */
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&family=Inter:wght@300;400;500&display=swap');
 
 :root {
