[FAIT] - Page dev

--- a/app/styles/about.css
+++ b/app/styles/about.css
@@ -1,4 +1,4 @@
-/* app/styles/about.css - VERSION COMPLÈTE AVEC EFFET NOIR ET BLANC */
+/* Todo : app/styles/about.css */
 .about-page {
     overflow-x: hidden;
 }
