--- a/app/styles/pricing-common.css
+++ b/app/styles/pricing-common.css
@@ -1,4 +1,4 @@
-/* app/styles/pricing-common.css */
+/* Todo : app/styles/pricing-common.css */
 :root {
     --deep-night: #0D0D0D;
     --dark-blue: #121212;
